// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Компоненты/Меню слева Компонент 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item active"
      >
        UI Компоненты
      </li>
      <li
        className="breadcrumb-item active"
      >
        Меню слева
      </li>
      <li
        className="breadcrumb-item active"
      >
        Компонент
      </li>
    </ol>
  </nav>
  <Card
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
    tag="div"
  >
    <CardBody
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "minWidth": "90%",
        }
      }
      tag="div"
    >
      <IntlProvider
        locale="ru"
        messages={Object {}}
      >
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <withContext(SecurityProvider)
            authProvider={[Function]}
            redirectPath="/login"
          >
            <FactoryProvider
              config={
                Object {
                  "actions": Object {
                    "dummyImpl": [Function],
                    "exportTable": [Function],
                    "link": [Function],
                    "perform": [Function],
                  },
                  "cells": Object {
                    "BadgeCell": [Function],
                    "ButtonsCell": [Function],
                    "CheckboxCell": [Function],
                    "CollapsedCell": [Function],
                    "EditableCell": [Function],
                    "IconCell": [Function],
                    "ImageCell": [Function],
                    "LinkCell": [Function],
                    "ProgressBarCell": [Function],
                    "TextCell": [Function],
                  },
                  "controls": Object {
                    "AutoComplete": [Function],
                    "ButtonUploader": [Function],
                    "Checkbox": [Function],
                    "CheckboxGroup": [Function],
                    "CodeEditor": [Function],
                    "DateInterval": [Function],
                    "DatePicker": [Function],
                    "DropZone": [Function],
                    "Html": [Function],
                    "InputHidden": [Function],
                    "InputMask": [Function],
                    "InputMoney": [Function],
                    "InputNumber": [Function],
                    "InputSelect": [Function],
                    "InputSelectTree": [Function],
                    "InputText": [Function],
                    "N2OSelect": [Function],
                    "OutputText": [Function],
                    "PasswordInput": [Function],
                    "Pills": [Function],
                    "RadioGroup": [Function],
                    "Rating": [Function],
                    "Select": [Function],
                    "Slider": [Function],
                    "Switch": [Function],
                    "TextArea": [Function],
                    "TextEditor": [Function],
                  },
                  "fields": Object {
                    "FilterButtonsField": [Function],
                    "RangeField": [Function],
                    "StandardField": [Function],
                    "TextField": [Function],
                  },
                  "fieldsets": Object {
                    "CollapseFieldset": [Function],
                    "LineFieldset": [Function],
                    "StandardFieldset": [Function],
                    "TitleFieldset": [Function],
                  },
                  "headers": Object {
                    "TextTableHeader": [Function],
                  },
                  "layouts": Object {
                    "LeftRightLayout": [Function],
                    "LeftTopBottomLayout": [Function],
                    "SingleLayout": [Function],
                    "TopBottomLayout": [Function],
                  },
                  "regions": Object {
                    "ListRegion": [Function],
                    "NoneRegion": [Function],
                    "PanelRegion": [Function],
                    "TabsRegion": [Function],
                  },
                  "snippets": Object {
                    "Alert": [Function],
                    "Collapse": [Function],
                    "Icon": [Function],
                    "Panel": [Function],
                    "Paragraph": [Function],
                    "PopoverConfirm": [Function],
                    "Spinner": [Function],
                    "Text": [Function],
                    "Title": [Function],
                    "Wireframe": [Function],
                  },
                  "widgets": Object {
                    "AdvancedTableWidget": [Function],
                    "ChartWidget": [Function],
                    "EditForm": [Function],
                    "FormWidget": [Function],
                    "HtmlWidget": [Function],
                    "ListWidget": [Function],
                    "TableWidget": [Function],
                    "TreeWidget": [Function],
                    "WireframeWidget": [Function],
                  },
                }
              }
              securityBlackList={Array []}
            >
              <Connect(ConnectedRouter)
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "key": "zybh0s",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "key": "zybh0s",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
              >
                <div>
                  <Story
                    PropTable={[Function]}
                    components={
                      Object {
                        "a": [Function],
                        "code": [Function],
                        "h1": [Function],
                        "h2": [Function],
                        "h3": [Function],
                        "h4": [Function],
                        "h5": [Function],
                        "h6": [Function],
                        "li": [Function],
                        "p": [Function],
                        "ul": [Function],
                      }
                    }
                    context={
                      Object {
                        "hooks": HooksContext {
                          "currentContext": [Circular],
                          "currentDecoratorName": null,
                          "currentEffects": Array [],
                          "currentHooks": Array [],
                          "currentPhase": "NONE",
                          "hasUpdates": false,
                          "hookListsMap": WeakMap {},
                          "mountedDecorators": Set {
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                          },
                          "nextHookIndex": 0,
                          "prevEffects": Array [],
                          "prevMountedDecorators": Set {},
                          "renderListener": [Function],
                        },
                        "id": "ui-компоненты-меню-слева--компонент",
                        "kind": "UI Компоненты/Меню слева",
                        "name": "Компонент",
                        "parameters": Object {
                          "fileName": "C:\\\\Users\\\\sliskov\\\\Projects\\\\n2o-new\\\\frontend\\\\n2o\\\\src\\\\plugins\\\\SideBar\\\\SideBar.story.js",
                          "framework": "react",
                          "info": Object {
                            "propTables": Array [
                              [Function],
                            ],
                            "propTablesExclude": Array [
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "text": "
      Компонент 'Боковое меню'
      ~~~js
      import Sidebar from 'n2o/lib/plugins/Sidebar/Sidebar';
      
      <Sidebar
          brand=\\"N2O Framework\\"
          brandImage=\\"https://dab1nmslvvntp.cloudfront.net/wp-content/uploads/2018/04/1525068825bootstrap-logo-png-logo-228.png\\"
          className=\\"\\"
          visible={true}
          userBox={{
              \\"image\\": \\"http://tiolly.by/img/empty_user.png\\",
              \\"title\\": \\"Александр Петров\\",
              \\"subTitle\\": \\"17.01.1987 * Москва\\",
              \\"items\\": [
                {
                  \\"id\\": \\"profile\\",
                  \\"label\\": \\"Профиль\\",
                  \\"iconClass\\": \\"fa fa-info\\",
                  \\"href\\": \\"/profile\\",
                  \\"type\\": \\"link\\"
                },
                {
                  \\"id\\": \\"settings\\",
                  \\"label\\": \\"Настройки\\",
                  \\"iconClass\\": \\"fa fa-cog\\",
                  \\"type\\": \\"dropdown\\",
                  \\"subItems\\": [
                    {
                      \\"id\\": \\"change-name\\",
                      \\"label\\": \\"Изменить имя\\",
                      \\"type\\": \\"link\\",
                      \\"href\\": \\"/change-name\\"
                    },
                    {
                      \\"id\\": \\"change-password\\",
                      \\"label\\": \\"Изменить пароль\\",
                      \\"type\\": \\"link\\",
                      \\"href\\": \\"/change-password\\"
                    }
                  ]
                }
              ]
          }}
          extra={
          [
            {
              \\"id\\": \\"exit\\",
              \\"label\\": \\"Выход\\",
              \\"iconClass\\": \\"fa fa-sign-out\\",
              \\"href\\": \\"/exit\\",
              \\"type\\": \\"link\\"
            }
          ]
        }
        items={
          [
            {
              \\"id\\": \\"link\\",
              \\"label\\": \\"О компании\\",
              \\"iconClass\\": \\"fa fa-info-circle\\",
              \\"href\\": \\"/\\",
              \\"type\\": \\"link\\"
            },
            {
              \\"id\\": \\"link\\",
              \\"label\\": \\"Новости\\",
              \\"iconClass\\": \\"fa fa-newspaper-o\\",
              \\"href\\": \\"/test\\",
              \\"type\\": \\"link\\",
              \\"security\\": {
                \\"roles\\": [\\"admin\\"]
              }
            },
            {
              \\"id\\": \\"link\\",
              \\"label\\": \\"Контакты\\",
              \\"href\\": \\"/test1\\",
              \\"type\\": \\"link\\"
            },
            {
              \\"id\\": \\"dropdown\\",
              \\"label\\": \\"Наши проекты\\",
              \\"iconClass\\": \\"fa fa-github\\",
              \\"type\\": \\"dropdown\\",
              \\"subItems\\": [
                {
                  \\"id\\": \\"link1\\",
                  \\"label\\": \\"N2O\\",
                  \\"type\\": \\"link\\",
                  \\"href\\": \\"/test3\\"
                },
                {
                  \\"id\\": \\"link2\\",
                  \\"label\\": \\"LSD\\",
                  \\"type\\": \\"link\\",
                  \\"href\\": \\"/test4\\"
                }
              ]
            }
          ]
        }
       />
      ~~~
      ",
                          },
                          "options": Object {
                            "hierarchyRootSeparator": "|",
                            "hierarchySeparator": /\\\\/\\|\\\\\\./,
                          },
                        },
                        "story": "Компонент",
                      }
                    }
                    excludedPropTypes={Array []}
                    info="
      Компонент 'Боковое меню'
      ~~~js
      import Sidebar from 'n2o/lib/plugins/Sidebar/Sidebar';
      
      <Sidebar
          brand=\\"N2O Framework\\"
          brandImage=\\"https://dab1nmslvvntp.cloudfront.net/wp-content/uploads/2018/04/1525068825bootstrap-logo-png-logo-228.png\\"
          className=\\"\\"
          visible={true}
          userBox={{
              \\"image\\": \\"http://tiolly.by/img/empty_user.png\\",
              \\"title\\": \\"Александр Петров\\",
              \\"subTitle\\": \\"17.01.1987 * Москва\\",
              \\"items\\": [
                {
                  \\"id\\": \\"profile\\",
                  \\"label\\": \\"Профиль\\",
                  \\"iconClass\\": \\"fa fa-info\\",
                  \\"href\\": \\"/profile\\",
                  \\"type\\": \\"link\\"
                },
                {
                  \\"id\\": \\"settings\\",
                  \\"label\\": \\"Настройки\\",
                  \\"iconClass\\": \\"fa fa-cog\\",
                  \\"type\\": \\"dropdown\\",
                  \\"subItems\\": [
                    {
                      \\"id\\": \\"change-name\\",
                      \\"label\\": \\"Изменить имя\\",
                      \\"type\\": \\"link\\",
                      \\"href\\": \\"/change-name\\"
                    },
                    {
                      \\"id\\": \\"change-password\\",
                      \\"label\\": \\"Изменить пароль\\",
                      \\"type\\": \\"link\\",
                      \\"href\\": \\"/change-password\\"
                    }
                  ]
                }
              ]
          }}
          extra={
          [
            {
              \\"id\\": \\"exit\\",
              \\"label\\": \\"Выход\\",
              \\"iconClass\\": \\"fa fa-sign-out\\",
              \\"href\\": \\"/exit\\",
              \\"type\\": \\"link\\"
            }
          ]
        }
        items={
          [
            {
              \\"id\\": \\"link\\",
              \\"label\\": \\"О компании\\",
              \\"iconClass\\": \\"fa fa-info-circle\\",
              \\"href\\": \\"/\\",
              \\"type\\": \\"link\\"
            },
            {
              \\"id\\": \\"link\\",
              \\"label\\": \\"Новости\\",
              \\"iconClass\\": \\"fa fa-newspaper-o\\",
              \\"href\\": \\"/test\\",
              \\"type\\": \\"link\\",
              \\"security\\": {
                \\"roles\\": [\\"admin\\"]
              }
            },
            {
              \\"id\\": \\"link\\",
              \\"label\\": \\"Контакты\\",
              \\"href\\": \\"/test1\\",
              \\"type\\": \\"link\\"
            },
            {
              \\"id\\": \\"dropdown\\",
              \\"label\\": \\"Наши проекты\\",
              \\"iconClass\\": \\"fa fa-github\\",
              \\"type\\": \\"dropdown\\",
              \\"subItems\\": [
                {
                  \\"id\\": \\"link1\\",
                  \\"label\\": \\"N2O\\",
                  \\"type\\": \\"link\\",
                  \\"href\\": \\"/test3\\"
                },
                {
                  \\"id\\": \\"link2\\",
                  \\"label\\": \\"LSD\\",
                  \\"type\\": \\"link\\",
                  \\"href\\": \\"/test4\\"
                }
              ]
            }
          ]
        }
       />
      ~~~
      "
                    maxPropArrayLength={3}
                    maxPropObjectKeys={3}
                    maxPropStringLength={50}
                    maxPropsIntoLine={3}
                    propTableCompare={[Function]}
                    propTables={
                      Array [
                        [Function],
                      ]
                    }
                    propTablesExclude={
                      Array [
                        [Function],
                        [Function],
                        [Function],
                      ]
                    }
                    showHeader={true}
                    showInline={true}
                    showSource={false}
                    styles={[Function]}
                  >
                    <_default>
                      <Sidebar
                        brand="N2O Framework"
                        brandImage="https://dab1nmslvvntp.cloudfront.net/wp-content/uploads/2018/04/1525068825bootstrap-logo-png-logo-228.png"
                        className=""
                        extra={
                          Array [
                            Object {
                              "href": "/exit",
                              "iconClass": "fa fa-sign-out",
                              "id": "exit",
                              "label": "Выход",
                              "type": "link",
                            },
                          ]
                        }
                        items={
                          Array [
                            Object {
                              "href": "/",
                              "iconClass": "fa fa-info-circle",
                              "id": "link",
                              "label": "О компании",
                              "type": "link",
                            },
                            Object {
                              "href": "/test",
                              "iconClass": "fa fa-newspaper-o",
                              "id": "link",
                              "label": "Новости",
                              "security": Object {
                                "roles": Array [
                                  "admin",
                                ],
                              },
                              "type": "link",
                            },
                            Object {
                              "href": "/test1",
                              "id": "link",
                              "label": "Контакты",
                              "type": "link",
                            },
                            Object {
                              "iconClass": "fa fa-github",
                              "id": "dropdown",
                              "label": "Наши проекты",
                              "subItems": Array [
                                Object {
                                  "href": "/test3",
                                  "id": "link1",
                                  "label": "N2O",
                                  "type": "link",
                                },
                                Object {
                                  "href": "/test4",
                                  "id": "link2",
                                  "label": "LSD",
                                  "type": "link",
                                },
                              ],
                              "type": "dropdown",
                            },
                          ]
                        }
                        userBox={
                          Object {
                            "image": "http://tiolly.by/img/empty_user.png",
                            "items": Array [
                              Object {
                                "href": "/profile",
                                "iconClass": "fa fa-info",
                                "id": "profile",
                                "label": "Профиль",
                                "type": "link",
                              },
                              Object {
                                "iconClass": "fa fa-cog",
                                "id": "settings",
                                "label": "Настройки",
                                "subItems": Array [
                                  Object {
                                    "href": "/change-name",
                                    "id": "change-name",
                                    "label": "Изменить имя",
                                    "type": "link",
                                  },
                                  Object {
                                    "href": "/change-password",
                                    "id": "change-password",
                                    "label": "Изменить пароль",
                                    "type": "link",
                                  },
                                ],
                                "type": "dropdown",
                              },
                            ],
                            "subTitle": "17.01.1987 * Москва",
                            "title": "Александр Петров",
                          }
                        }
                        visible={true}
                      />
                      <div
                        style={
                          Object {
                            "position": "relative",
                            "width": "100%",
                          }
                        }
                      >
                        <Wireframe
                          className="n2o"
                          style={
                            Object {
                              "bottom": 0,
                              "top": 0,
                            }
                          }
                          title="Тело страницы"
                        />
                      </div>
                    </_default>
                  </Story>
                  <withContext(Connect(ModalPages)) />
                </div>
              </Connect(ConnectedRouter)>
            </FactoryProvider>
          </withContext(SecurityProvider)>
        </Provider>
      </IntlProvider>
    </CardBody>
  </Card>
</div>
`;

exports[`Storyshots UI Компоненты/Меню слева Ограничение доступа 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item active"
      >
        UI Компоненты
      </li>
      <li
        className="breadcrumb-item active"
      >
        Меню слева
      </li>
      <li
        className="breadcrumb-item active"
      >
        Ограничение доступа
      </li>
    </ol>
  </nav>
  <Card
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
    tag="div"
  >
    <CardBody
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "minWidth": "90%",
        }
      }
      tag="div"
    >
      <IntlProvider
        locale="ru"
        messages={Object {}}
      >
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <withContext(SecurityProvider)
            authProvider={[Function]}
            redirectPath="/login"
          >
            <FactoryProvider
              config={
                Object {
                  "actions": Object {
                    "dummyImpl": [Function],
                    "exportTable": [Function],
                    "link": [Function],
                    "perform": [Function],
                  },
                  "cells": Object {
                    "BadgeCell": [Function],
                    "ButtonsCell": [Function],
                    "CheckboxCell": [Function],
                    "CollapsedCell": [Function],
                    "EditableCell": [Function],
                    "IconCell": [Function],
                    "ImageCell": [Function],
                    "LinkCell": [Function],
                    "ProgressBarCell": [Function],
                    "TextCell": [Function],
                  },
                  "controls": Object {
                    "AutoComplete": [Function],
                    "ButtonUploader": [Function],
                    "Checkbox": [Function],
                    "CheckboxGroup": [Function],
                    "CodeEditor": [Function],
                    "DateInterval": [Function],
                    "DatePicker": [Function],
                    "DropZone": [Function],
                    "Html": [Function],
                    "InputHidden": [Function],
                    "InputMask": [Function],
                    "InputMoney": [Function],
                    "InputNumber": [Function],
                    "InputSelect": [Function],
                    "InputSelectTree": [Function],
                    "InputText": [Function],
                    "N2OSelect": [Function],
                    "OutputText": [Function],
                    "PasswordInput": [Function],
                    "Pills": [Function],
                    "RadioGroup": [Function],
                    "Rating": [Function],
                    "Select": [Function],
                    "Slider": [Function],
                    "Switch": [Function],
                    "TextArea": [Function],
                    "TextEditor": [Function],
                  },
                  "fields": Object {
                    "FilterButtonsField": [Function],
                    "RangeField": [Function],
                    "StandardField": [Function],
                    "TextField": [Function],
                  },
                  "fieldsets": Object {
                    "CollapseFieldset": [Function],
                    "LineFieldset": [Function],
                    "StandardFieldset": [Function],
                    "TitleFieldset": [Function],
                  },
                  "headers": Object {
                    "TextTableHeader": [Function],
                  },
                  "layouts": Object {
                    "LeftRightLayout": [Function],
                    "LeftTopBottomLayout": [Function],
                    "SingleLayout": [Function],
                    "TopBottomLayout": [Function],
                  },
                  "regions": Object {
                    "ListRegion": [Function],
                    "NoneRegion": [Function],
                    "PanelRegion": [Function],
                    "TabsRegion": [Function],
                  },
                  "snippets": Object {
                    "Alert": [Function],
                    "Collapse": [Function],
                    "Icon": [Function],
                    "Panel": [Function],
                    "Paragraph": [Function],
                    "PopoverConfirm": [Function],
                    "Spinner": [Function],
                    "Text": [Function],
                    "Title": [Function],
                    "Wireframe": [Function],
                  },
                  "widgets": Object {
                    "AdvancedTableWidget": [Function],
                    "ChartWidget": [Function],
                    "EditForm": [Function],
                    "FormWidget": [Function],
                    "HtmlWidget": [Function],
                    "ListWidget": [Function],
                    "TableWidget": [Function],
                    "TreeWidget": [Function],
                    "WireframeWidget": [Function],
                  },
                }
              }
              securityBlackList={Array []}
            >
              <Connect(ConnectedRouter)
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "key": "zybh0s",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "key": "zybh0s",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
              >
                <div>
                  <Story
                    PropTable={[Function]}
                    components={
                      Object {
                        "a": [Function],
                        "code": [Function],
                        "h1": [Function],
                        "h2": [Function],
                        "h3": [Function],
                        "h4": [Function],
                        "h5": [Function],
                        "h6": [Function],
                        "li": [Function],
                        "p": [Function],
                        "ul": [Function],
                      }
                    }
                    context={
                      Object {
                        "hooks": HooksContext {
                          "currentContext": [Circular],
                          "currentDecoratorName": null,
                          "currentEffects": Array [],
                          "currentHooks": Array [],
                          "currentPhase": "NONE",
                          "hasUpdates": false,
                          "hookListsMap": WeakMap {},
                          "mountedDecorators": Set {
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                          },
                          "nextHookIndex": 0,
                          "prevEffects": Array [],
                          "prevMountedDecorators": Set {},
                          "renderListener": [Function],
                        },
                        "id": "ui-компоненты-меню-слева--ограничение-доступа",
                        "kind": "UI Компоненты/Меню слева",
                        "name": "Ограничение доступа",
                        "parameters": Object {
                          "fileName": "C:\\\\Users\\\\sliskov\\\\Projects\\\\n2o-new\\\\frontend\\\\n2o\\\\src\\\\plugins\\\\SideBar\\\\SideBar.story.js",
                          "framework": "react",
                          "info": Object {
                            "propTables": Array [
                              [Function],
                            ],
                            "propTablesExclude": Array [
                              [Function],
                              [Function],
                              [Function],
                            ],
                          },
                          "options": Object {
                            "hierarchyRootSeparator": "|",
                            "hierarchySeparator": /\\\\/\\|\\\\\\./,
                          },
                        },
                        "story": "Ограничение доступа",
                      }
                    }
                    excludedPropTypes={Array []}
                    info=""
                    maxPropArrayLength={3}
                    maxPropObjectKeys={3}
                    maxPropStringLength={50}
                    maxPropsIntoLine={3}
                    propTableCompare={[Function]}
                    propTables={
                      Array [
                        [Function],
                      ]
                    }
                    propTablesExclude={
                      Array [
                        [Function],
                        [Function],
                        [Function],
                      ]
                    }
                    showHeader={true}
                    showInline={true}
                    showSource={false}
                    styles={[Function]}
                  >
                    <_default>
                      <getContext(Connect(Security))
                        brand="N2O Framework"
                        brandImage="https://dab1nmslvvntp.cloudfront.net/wp-content/uploads/2018/04/1525068825bootstrap-logo-png-logo-228.png"
                        className=""
                        extra={
                          Array [
                            Object {
                              "href": "/exit",
                              "iconClass": "fa fa-sign-out",
                              "id": "exit",
                              "label": "Выход",
                              "type": "link",
                            },
                          ]
                        }
                        items={
                          Array [
                            Object {
                              "href": "/",
                              "iconClass": "fa fa-info-circle",
                              "id": "link",
                              "label": "О компании",
                              "type": "link",
                            },
                            Object {
                              "href": "/test",
                              "iconClass": "fa fa-newspaper-o",
                              "id": "link",
                              "label": "Новости",
                              "security": Object {
                                "roles": Array [
                                  "admin",
                                ],
                              },
                              "type": "link",
                            },
                            Object {
                              "href": "/test1",
                              "id": "link",
                              "label": "Контакты",
                              "type": "link",
                            },
                            Object {
                              "iconClass": "fa fa-github",
                              "id": "dropdown",
                              "label": "Наши проекты",
                              "subItems": Array [
                                Object {
                                  "href": "/test3",
                                  "id": "link1",
                                  "label": "N2O",
                                  "type": "link",
                                },
                                Object {
                                  "href": "/test4",
                                  "id": "link2",
                                  "label": "LSD",
                                  "type": "link",
                                },
                              ],
                              "type": "dropdown",
                            },
                          ]
                        }
                        userBox={
                          Object {
                            "image": "http://tiolly.by/img/empty_user.png",
                            "items": Array [
                              Object {
                                "href": "/profile",
                                "iconClass": "fa fa-info",
                                "id": "profile",
                                "label": "Профиль",
                                "type": "link",
                              },
                              Object {
                                "iconClass": "fa fa-cog",
                                "id": "settings",
                                "label": "Настройки",
                                "subItems": Array [
                                  Object {
                                    "href": "/change-name",
                                    "id": "change-name",
                                    "label": "Изменить имя",
                                    "type": "link",
                                  },
                                  Object {
                                    "href": "/change-password",
                                    "id": "change-password",
                                    "label": "Изменить пароль",
                                    "type": "link",
                                  },
                                ],
                                "type": "dropdown",
                              },
                            ],
                            "subTitle": "17.01.1987 * Москва",
                            "title": "Александр Петров",
                          }
                        }
                        visible={true}
                      />
                      <div
                        style={
                          Object {
                            "position": "relative",
                            "width": "100%",
                          }
                        }
                      >
                        <small>
                          Введите 
                          <mark>
                            admin
                          </mark>
                          , чтобы увидеть скрытый элемент меню
                        </small>
                        <Connect(AuthButton) />
                        <br />
                      </div>
                    </_default>
                  </Story>
                  <withContext(Connect(ModalPages)) />
                </div>
              </Connect(ConnectedRouter)>
            </FactoryProvider>
          </withContext(SecurityProvider)>
        </Provider>
      </IntlProvider>
    </CardBody>
  </Card>
</div>
`;
